--- a/client/style.css
+++ b/client/style.css
@@ -143,3 +143,44 @@ button:hover {
     width: 100%;
   }
 }
+
+/* ----------------------------- Org Page ---------------------------------------- */
+
+#org-main {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#leaderboard-container {
+  width: 30%;
+  height: 70vh;
+  background-color: rgb(187, 186, 186);
+  border-radius: 20px;
+  border: #3aafa988 solid 10px;
+}
+
+#aside {
+  height: 70vh;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#above {
+  width: 100%;
+  height: 20vh;
+  background-color: rgb(187, 186, 186);
+  border-radius: 20px;
+  border: #3aafa988 solid 10px;
+}
+
+#user-card {
+  width: 100%;
+  height: 40vh;
+  background-color: rgb(187, 186, 186);
+  border-radius: 20px;
+  border: #3aafa988 solid 10px;
+}
