Working swipe element

--- a/client/style.css
+++ b/client/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --i: 0;
+  --drag: 0px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -144,7 +149,7 @@ button:hover {
   }
 }
 
-/* ----------------------------- Org Page ---------------------------------------- */
+/* --------------------------- Org Page ------------------------------- */
 
 #org-main {
   margin-top: 100px;
@@ -154,11 +159,41 @@ button:hover {
 }
 
 #leaderboard-container {
+  position: relative;
+  overflow: hidden;
   width: 30%;
   height: 70vh;
   background-color: rgb(187, 186, 186);
   border-radius: 20px;
   border: #3aafa988 solid 10px;
+}
+
+#inner-container {
+  width: 200%;
+  height: 100%;
+  display: flex;
+  overflow-y: hidden;
+  transform: translate(calc(var(--i) / 2 * -100% + var(--drag)));
+  transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.2);
+}
+
+#Item1 {
+  background-color: aqua;
+  width: 50%;
+  pointer-events: none;
+}
+
+#leaderboard {
+  background-color: papayawhip;
+  width: 50%;
+  pointer-events: none;
+}
+
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 #aside {
