--- a/client/style.css
+++ b/client/style.css
@@ -149,6 +149,76 @@ button:hover {
   }
 }
 
+/* --------------------------- Personal Page ------------------------------- */
+
+.habitForm {
+  border: 5px solid #ccc;
+  border-radius: 25px;
+  background-color: white;
+}
+.habitSelect {
+  display: flex;
+}
+
+input[type="checkbox"][id="waterHabit"] {
+  display: none;
+}
+input[type="checkbox"][id="sleepHabit"] {
+  display: none;
+}
+
+label {
+  border: 1px solid #fff;
+  padding: 10px;
+  display: block;
+  position: relative;
+  margin: 10px;
+  cursor: pointer;
+  width: 50%;
+}
+
+label::before {
+  background-color: white;
+  color: white;
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  border: 1px solid grey;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 28px;
+  transition-duration: 0.4s;
+  transform: scale(0);
+}
+
+label img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+}
+
+:checked + label {
+  border-color: #ddd;
+}
+
+:checked + label::before {
+  content: "✓";
+  background-color: grey;
+  transform: scale(1);
+}
+
+:checked + label img {
+  transform: scale(0.9);
+  box-shadow: 0 0 5px #333;
+  z-index: -1;
+}
+
 /* --------------------------- Org Page ------------------------------- */
 
 #org-main {
