--- a/client/style.css
+++ b/client/style.css
@@ -13,6 +13,13 @@ body {
   background-color: #3aafa9;
 }
 
+.top-nav {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+}
+
 /* Styling Title */
 
 .titleWrap {
@@ -147,6 +154,30 @@ button:hover {
   .signupbtn {
     width: 100%;
   }
+}
+
+.rules-square {
+  border: darkslategrey solid 3px;
+  width: 80%;
+}
+
+#rule-container {
+  position: absolute;
+  left: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-left: 100px;
+  font-size: 2em;
+}
+
+h2,
+h4,
+h5 {
+  font-family: "Abril Fatface", cursive;
+  font-weight: bold;
 }
 
 /* --------------------------- Personal Page ------------------------------- */
