--- a/client/style.css
+++ b/client/style.css
@@ -192,7 +192,7 @@ h5 {
   background-color: white;
   max-width: fit-content;
   max-height: fit-content;
-  margin: 1%;
+  margin: 0 auto;
   margin-top: 100px;
   margin-bottom: 100px;
   padding: 2%;
